# AdventOfCode

./: .gitignore  README.md
2023/: README.md
2023/Day2/: Main.java
2023/Day4/: Main.java
2024/: README.md
2024/Day 1/: main.py
2024/Day 2/: main.go
2024/Day 3/: Day3.sln
2024/Day 3/Day3/: Day3.csproj  Program.cs  input.txt
2024/Day 4/: Day4.cabal
2024/Day 4/src/: Main.hs
2024/Day 5/: main.cpp
2024/Day 6/: build.gradle.kts
2024/Day 6/src/main/java/net/devmarcel/: Main.java
2024/Day 7/: package-lock.json  package.json
2024/Day 7/src/: index.ts
2024/Day 8/: expected_small.txt
2024/Day 8/src/: main.rs
2025/: README.md
2025/D1/: Cargo.toml
2025/D1/src/: main.rs
2025/D2/: Cargo.toml
2025/D2/src/: main.rs
2025/D3/: Cargo.toml
2025/D3/src/: main.rs
2025/D4/: Cargo.toml
2025/D4/src/: main.rs
src/Day1/: Main.java
src/Day10/: Main.java
src/Day2/: Main.java
src/Day3/: Main.java  input.txt
src/Day4/: Main.java
src/Day5/: Main.java
src/Day6/: Main.java
src/Day7/: Main.java
src/Day8/: Main.java
src/Day9/: Main.java
