cabal-version:      3.0
name:               Day4
version:            0.1.0.0
-- synopsis:
-- description:

author:             Supermarcel10
maintainer:         marcelbarlik@gmail.com

category:           AoC
build-type:         Simple

common warnings
    ghc-options: -Wall

executable Day4
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: GHC2021
